Animation Kompatibilitäts-Fix